--- a/accounts.html
+++ b/accounts.html
@@ -1,112 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>VOID - Account</title>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Void | Account</title>
   <style>
     body {
       background-color: black;
       color: white;
-      font-family: monospace;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      text-align: center;
     }
 
     header {
       background-color: #111;
-      width: 100%;
-      padding: 10px;
-      text-align: center;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      margin: 0;
       font-size: 24px;
-      border-bottom: 1px solid #333;
+      color: white;
     }
 
     nav {
-      margin: 10px;
+      display: flex;
+      gap: 1rem;
     }
 
-    nav button {
-      background-color: black;
+    nav a, button.nav-btn {
       color: white;
-      border: 1px solid white;
-      padding: 5px 10px;
-      margin: 5px;
+      background: none;
+      border: none;
+      font-size: 16px;
       cursor: pointer;
+      text-decoration: underline;
     }
 
-    #form-container, #profile-container {
-      border: 1px solid white;
-      padding: 20px;
-      margin-top: 20px;
-      width: 90%;
-      max-width: 500px;
+    .container {
+      padding: 2rem;
+      max-width: 600px;
+      margin: auto;
     }
 
     input, textarea {
       width: 100%;
-      margin-top: 5px;
-      margin-bottom: 10px;
+      padding: 0.5rem;
+      margin: 0.5rem 0;
+      border-radius: 4px;
+      border: 1px solid #444;
       background-color: #111;
       color: white;
-      border: 1px solid white;
-      padding: 8px;
     }
 
-    img {
-      max-width: 100px;
+    .profile-pic {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
       border-radius: 50%;
-      margin-top: 10px;
+      margin-bottom: 1rem;
     }
 
     .hidden {
       display: none;
     }
+
+    .btn {
+      margin: 0.5rem;
+      padding: 0.5rem 1rem;
+      background-color: #222;
+      border: none;
+      color: white;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    .btn:hover {
+      background-color: #333;
+    }
+
+    .stats {
+      background: #111;
+      padding: 1rem;
+      border-radius: 8px;
+      margin-top: 1rem;
+      border: 1px solid #444;
+    }
   </style>
 </head>
 <body>
-  <header>VOID</header>
+  <header>
+    <h1>VOID</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <button class="nav-btn" id="editBtn">Edit Profile</button>
+      <button class="nav-btn" id="logoutBtn">Logout</button>
+    </nav>
+  </header>
 
-  <nav>
-    <button onclick="toggleForm()">Switch to Signup/Login</button>
-    <button onclick="editProfile()" id="editBtn" class="hidden">Edit Profile</button>
-    <button onclick="logout()" id="logoutBtn" class="hidden">Logout</button>
-  </nav>
-
-  <div id="form-container">
-    <h2 id="formTitle">Login</h2>
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
-    <input type="text" id="username" placeholder="Username (Sign Up only)" class="hidden">
-    <button onclick="submitForm()">Submit</button>
+  <div class="container" id="authSection">
+    <h2 id="authToggleTitle">Login</h2>
+    <input type="email" id="email" placeholder="Email" />
+    <input type="password" id="password" placeholder="Password" />
+    <button class="btn" id="authActionBtn">Login</button>
+    <p><a href="#" id="toggleAuth">Need to sign up?</a></p>
   </div>
 
-  <div id="profile-container" class="hidden">
-    <h2 id="profileHeader">Your Profile</h2>
-    <div id="view-mode">
-      <img id="view-pic" src="" alt="Profile Pic"><br>
-      <strong>Username:</strong> <span id="view-username"></span><br>
-      <strong>Age:</strong> <span id="view-age"></span><br>
-      <strong>Gender:</strong> <span id="view-gender"></span><br>
-      <strong>Bio:</strong> <span id="view-bio"></span><br>
-      <strong>Recent Visitors:</strong>
-      <ul id="visitorList"></ul>
-    </div>
-    <div id="edit-mode" class="hidden">
-      <input type="text" id="edit-age" placeholder="Age">
-      <input type="text" id="edit-gender" placeholder="Gender">
-      <textarea id="edit-bio" placeholder="Bio"></textarea>
-      <input type="text" id="edit-pic" placeholder="Profile Picture URL">
-      <button onclick="saveProfile()">Save</button>
+  <div class="container hidden" id="profileSection">
+    <img id="profilePic" class="profile-pic" src="" alt="Profile Picture"/>
+    <input id="profilePicInput" placeholder="Profile Picture URL" class="hidden" />
+
+    <input id="nameInput" placeholder="Name" disabled />
+    <input id="ageInput" placeholder="Age" disabled />
+    <input id="genderInput" placeholder="Gender" disabled />
+    <textarea id="bioInput" placeholder="Bio" disabled></textarea>
+    <input id="locationInput" placeholder="Location" disabled />
+    <input id="interestsInput" placeholder="Interests" disabled />
+    <input id="joinedInput" placeholder="Joined" disabled />
+
+    <button class="btn hidden" id="saveProfileBtn">Save</button>
+
+    <div class="stats">
+      <p><strong>Status:</strong> Connected</p>
+      <p><strong>Reputation:</strong> Mysterious</p>
+      <p><strong>Posts:</strong> 0</p>
     </div>
   </div>
 
-  <script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getDatabase, ref, set, get, update } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
+
     const firebaseConfig = {
       apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
@@ -118,107 +148,123 @@
       measurementId: "G-ZYMQ3Z6LC5"
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.database();
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+    const db = getDatabase();
+
+    const authSection = document.getElementById("authSection");
+    const profileSection = document.getElementById("profileSection");
+    const toggleAuth = document.getElementById("toggleAuth");
+    const authActionBtn = document.getElementById("authActionBtn");
+    const authToggleTitle = document.getElementById("authToggleTitle");
+
+    const emailInput = document.getElementById("email");
+    const passwordInput = document.getElementById("password");
 
     let isLogin = true;
 
-    function toggleForm() {
+    toggleAuth.addEventListener("click", () => {
       isLogin = !isLogin;
-      document.getElementById("formTitle").innerText = isLogin ? "Login" : "Sign Up";
-      document.getElementById("username").classList.toggle("hidden", isLogin);
-    }
+      authToggleTitle.innerText = isLogin ? "Login" : "Sign Up";
+      authActionBtn.innerText = isLogin ? "Login" : "Sign Up";
+      toggleAuth.innerText = isLogin ? "Need to sign up?" : "Already have an account?";
+    });
 
-    function submitForm() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const username = document.getElementById("username").value;
-
-      if (isLogin) {
-        auth.signInWithEmailAndPassword(email, password).then(() => {
-          loadProfile();
-        }).catch(alert);
-      } else {
-        auth.createUserWithEmailAndPassword(email, password).then(cred => {
-          db.ref("users/" + cred.user.uid).set({
-            username,
+    authActionBtn.addEventListener("click", async () => {
+      const email = emailInput.value;
+      const password = passwordInput.value;
+      try {
+        if (isLogin) {
+          await signInWithEmailAndPassword(auth, email, password);
+        } else {
+          const userCred = await createUserWithEmailAndPassword(auth, email, password);
+          const user = userCred.user;
+          await set(ref(db, "users/" + user.uid), {
+            email,
+            name: "",
             age: "",
             gender: "",
             bio: "",
-            pic: "",
-            visitors: []
-          }).then(() => loadProfile());
-        }).catch(alert);
-      }
-    }
-
-    function loadProfile() {
-      document.getElementById("form-container").classList.add("hidden");
-      document.getElementById("profile-container").classList.remove("hidden");
-      document.getElementById("editBtn").classList.remove("hidden");
-      document.getElementById("logoutBtn").classList.remove("hidden");
-
-      const uid = auth.currentUser.uid;
-      db.ref("users/" + uid).once("value").then(snapshot => {
-        const data = snapshot.val();
-        document.getElementById("view-username").innerText = data.username;
-        document.getElementById("view-age").innerText = data.age;
-        document.getElementById("view-gender").innerText = data.gender;
-        document.getElementById("view-bio").innerText = data.bio;
-        document.getElementById("view-pic").src = data.pic || "";
-
-        const visitorList = document.getElementById("visitorList");
-        visitorList.innerHTML = "";
-        const visitors = data.visitors || [];
-        visitors.slice(-5).reverse().forEach(v => {
-          const li = document.createElement("li");
-          li.innerText = v;
-          visitorList.appendChild(li);
-        });
-      });
-    }
-
-    function editProfile() {
-      document.getElementById("view-mode").classList.add("hidden");
-      document.getElementById("edit-mode").classList.remove("hidden");
-
-      const uid = auth.currentUser.uid;
-      db.ref("users/" + uid).once("value").then(snapshot => {
-        const data = snapshot.val();
-        document.getElementById("edit-age").value = data.age || "";
-        document.getElementById("edit-gender").value = data.gender || "";
-        document.getElementById("edit-bio").value = data.bio || "";
-        document.getElementById("edit-pic").value = data.pic || "";
-      });
-    }
-
-    function saveProfile() {
-      const uid = auth.currentUser.uid;
-      const updates = {
-        age: document.getElementById("edit-age").value,
-        gender: document.getElementById("edit-gender").value,
-        bio: document.getElementById("edit-bio").value,
-        pic: document.getElementById("edit-pic").value
-      };
-      db.ref("users/" + uid).update(updates).then(() => {
-        document.getElementById("edit-mode").classList.add("hidden");
-        document.getElementById("view-mode").classList.remove("hidden");
-        loadProfile();
-      });
-    }
-
-    function logout() {
-      auth.signOut().then(() => {
-        location.reload();
-      });
-    }
-
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        loadProfile();
+            location: "",
+            interests: "",
+            profilePic: "",
+            joined: new Date().toLocaleDateString()
+          });
+        }
+      } catch (error) {
+        alert("Auth error: " + error.message);
       }
     });
+
+    onAuthStateChanged(auth, async (user) => {
+      if (user) {
+        authSection.classList.add("hidden");
+        profileSection.classList.remove("hidden");
+        loadProfile(user.uid);
+      } else {
+        authSection.classList.remove("hidden");
+        profileSection.classList.add("hidden");
+      }
+    });
+
+    const profilePic = document.getElementById("profilePic");
+    const profilePicInput = document.getElementById("profilePicInput");
+    const nameInput = document.getElementById("nameInput");
+    const ageInput = document.getElementById("ageInput");
+    const genderInput = document.getElementById("genderInput");
+    const bioInput = document.getElementById("bioInput");
+    const locationInput = document.getElementById("locationInput");
+    const interestsInput = document.getElementById("interestsInput");
+    const joinedInput = document.getElementById("joinedInput");
+    const saveProfileBtn = document.getElementById("saveProfileBtn");
+    const editBtn = document.getElementById("editBtn");
+    const logoutBtn = document.getElementById("logoutBtn");
+
+    async function loadProfile(uid) {
+      const snap = await get(ref(db, "users/" + uid));
+      if (snap.exists()) {
+        const data = snap.val();
+        profilePic.src = data.profilePic || "";
+        profilePicInput.value = data.profilePic || "";
+        nameInput.value = data.name || "";
+        ageInput.value = data.age || "";
+        genderInput.value = data.gender || "";
+        bioInput.value = data.bio || "";
+        locationInput.value = data.location || "";
+        interestsInput.value = data.interests || "";
+        joinedInput.value = data.joined || "";
+      }
+    }
+
+    editBtn.addEventListener("click", () => {
+      [nameInput, ageInput, genderInput, bioInput, profilePicInput, locationInput, interestsInput].forEach(el => el.disabled = false);
+      saveProfileBtn.classList.remove("hidden");
+      profilePicInput.classList.remove("hidden");
+    });
+
+    saveProfileBtn.addEventListener("click", async () => {
+      const user = auth.currentUser;
+      if (!user) return;
+
+      const updatedData = {
+        name: nameInput.value,
+        age: ageInput.value,
+        gender: genderInput.value,
+        bio: bioInput.value,
+        location: locationInput.value,
+        interests: interestsInput.value,
+        profilePic: profilePicInput.value
+      };
+
+      await update(ref(db, "users/" + user.uid), updatedData);
+      profilePic.src = profilePicInput.value;
+
+      [nameInput, ageInput, genderInput, bioInput, profilePicInput, locationInput, interestsInput].forEach(el => el.disabled = true);
+      profilePicInput.classList.add("hidden");
+      saveProfileBtn.classList.add("hidden");
+    });
+
+    logoutBtn.addEventListener("click", () => signOut(auth));
   </script>
 </body>
 </html>
