--- a/profiles.html
+++ b/profiles.html
@@ -1,86 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Profiles - VOID</title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Profiles - VOID</title>
   <style>
     body {
-      margin: 0;
       background-color: black;
       color: white;
-      font-family: Arial, sans-serif;
+      font-family: monospace;
+      margin: 0;
     }
     header {
       background-color: #111;
-      padding: 10px 20px;
+      padding: 10px;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      border-bottom: 1px solid #333;
     }
-    nav a {
-      margin-left: 15px;
+    .nav a {
+      color: white;
+      margin: 0 10px;
       text-decoration: none;
-      color: white;
+      border: 1px solid white;
+      padding: 4px 8px;
     }
-    .container {
-      padding: 20px;
-    }
-    .user-card {
-      border: 1px solid #444;
-      margin: 10px 0;
+    .profile-card {
+      border: 1px solid white;
+      margin: 10px;
       padding: 10px;
-      border-radius: 5px;
-      position: relative;
     }
-    .status-dot {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      display: inline-block;
-      margin-right: 8px;
-    }
-    .online { background-color: green; }
-    .offline { background-color: red; }
-    input[type="text"] {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 20px;
-      background-color: #222;
-      color: white;
-      border: 1px solid #555;
-    }
+    .online { color: lightgreen; }
+    .offline { color: red; }
     button {
-      background: none;
-      color: white;
-      border: 1px solid #555;
-      padding: 5px 10px;
-      margin-top: 5px;
-      cursor: pointer;
+      margin-right: 10px;
     }
   </style>
 </head>
 <body>
   <header>
-    <div><strong>VOID</strong></div>
-    <nav>
+    <div><b>VOID</b></div>
+    <div class="nav">
       <a href="index.html">Home</a>
-      <a href="accounts.html">My Profile</a>
-      <a href="profiles.html">Profiles</a>
+      <a href="accounts.html">Profile</a>
+      <a href="profiles.html">View Profiles</a>
+      <a href="echoes.html">Echoes</a>
       <a href="messages.html">Messages</a>
       <a href="#" onclick="logout()">Logout</a>
-    </nav>
+    </div>
   </header>
-  <div class="container">
-    <h2>Explore Profiles</h2>
-    <input type="text" id="searchInput" placeholder="Search users..." onkeyup="filterUsers()" />
-    <div id="usersList">Loading users...</div>
-  </div>
 
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-  <script>
+  <main>
+    <h2 style="text-align:center;">All Profiles</h2>
+    <div id="profilesContainer"></div>
+  </main>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import {
+      getAuth,
+      onAuthStateChanged,
+      signOut
+    } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
+    import {
+      getDatabase,
+      ref,
+      onValue,
+      update,
+      set,
+      push
+    } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+
     const firebaseConfig = {
       apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
@@ -91,74 +80,90 @@
       appId: "1:267268035851:web:1e5ab79c51db42160f3e0e",
       measurementId: "G-ZYMQ3Z6LC5"
     };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-    const auth = firebase.auth();
 
-    let currentUser;
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+    const db = getDatabase();
 
-    auth.onAuthStateChanged(user => {
-      if (!user) return window.location.href = "accounts.html";
-      currentUser = user;
-      loadUsers();
+    let currentUser = null;
+    let currentUserData = null;
+
+    onAuthStateChanged(auth, user => {
+      if (user) {
+        currentUser = user;
+        loadProfiles();
+        onValue(ref(db, `users/${user.uid}`), snap => {
+          currentUserData = snap.val();
+        });
+      } else {
+        window.location.href = "index.html";
+      }
     });
 
     function logout() {
-      firebase.auth().signOut();
+      signOut(auth);
     }
 
-    function loadUsers() {
-      db.ref("users").once("value", snap => {
-        const usersData = snap.val() || {};
-        const userEntries = Object.entries(usersData).filter(([uid]) => uid !== currentUser.uid);
+    function loadProfiles() {
+      onValue(ref(db, 'users'), snapshot => {
+        const users = snapshot.val();
+        const list = Object.entries(users || {}).filter(([uid]) => uid !== currentUser.uid);
+        const sorted = list.sort((a, b) => (b[1].online || 0) - (a[1].online || 0));
 
-        const now = Date.now();
-        userEntries.forEach(([uid, data]) => {
-          data.uid = uid;
-          data.isOnline = data.lastOnline && (now - data.lastOnline < 30000);
-        });
+        const container = document.getElementById('profilesContainer');
+        container.innerHTML = "";
 
-        userEntries.sort((a, b) => {
-          return (b[1].isOnline - a[1].isOnline) || (b[1].lastOnline || 0) - (a[1].lastOnline || 0);
-        });
+        const seen = new Set();
 
-        displayUsers(userEntries);
+        for (const [uid, data] of sorted) {
+          if (seen.has(uid)) continue;
+          seen.add(uid);
+
+          const card = document.createElement('div');
+          card.className = 'profile-card';
+
+          const status = data.online && (Date.now() - data.online < 30000) ? 'online' : 'offline';
+          const isFollowing = currentUserData?.following?.[uid];
+
+          card.innerHTML = `
+            <div><b>${data.username || "Unnamed"}</b> - <span class="${status}">${status}</span></div>
+            <div>${data.bio || "No bio"}</div>
+            <div>Age: ${data.age || "?"} | Gender: ${data.gender || "?"}</div>
+            <img src="${data.profilePic || ''}" style="max-width:100px;max-height:100px;"><br/>
+          `;
+
+          const followBtn = document.createElement('button');
+          followBtn.textContent = isFollowing ? "Unfollow" : "Follow";
+          followBtn.onclick = () => {
+            const updates = {};
+            updates[`users/${currentUser.uid}/following/${uid}`] = isFollowing ? null : true;
+            updates[`users/${uid}/followers/${currentUser.uid}`] = isFollowing ? null : true;
+            update(ref(db), updates);
+          };
+
+          const dmBtn = document.createElement('button');
+          dmBtn.textContent = "Send DM";
+          dmBtn.onclick = () => {
+            const msg = prompt("Enter your message:");
+            if (msg) {
+              const dmRef = push(ref(db, 'dms'));
+              set(dmRef, {
+                from: currentUser.uid,
+                to: uid,
+                message: msg,
+                createdAt: Date.now(),
+                displayName: currentUserData?.username || "User"
+              }).then(() => {
+                alert("DM sent! It will expire in 1 hour.");
+              });
+            }
+          };
+
+          card.appendChild(followBtn);
+          card.appendChild(dmBtn);
+          container.appendChild(card);
+        }
       });
-    }
-
-    function displayUsers(entries) {
-      const container = document.getElementById("usersList");
-      container.innerHTML = "";
-
-      entries.forEach(([uid, data]) => {
-        const div = document.createElement("div");
-        div.className = "user-card";
-        div.setAttribute("data-username", data.username.toLowerCase());
-
-        const dot = document.createElement("span");
-        dot.className = `status-dot ${data.isOnline ? 'online' : 'offline'}`;
-
-        div.innerHTML = `
-          <div>${dot.outerHTML}<strong>${data.username}</strong></div>
-          <div>${data.bio || "No bio yet."}</div>
-          <button onclick="viewProfile('${uid}')">View Profile</button>
-        `;
-        container.appendChild(div);
-      });
-    }
-
-    function filterUsers() {
-      const val = document.getElementById("searchInput").value.toLowerCase();
-      const cards = document.querySelectorAll(".user-card");
-      cards.forEach(card => {
-        const match = card.getAttribute("data-username").includes(val);
-        card.style.display = match ? "block" : "none";
-      });
-    }
-
-    function viewProfile(uid) {
-      localStorage.setItem("viewUser", uid);
-      window.location.href = "accounts.html?view=true";
     }
   </script>
 </body>
